# mbam

./: AGENTS.md  REPOSITORY_MAP.md  docker-compose.private.env.example  docker-compose.private.yml  mbam-first-commit.sh
mbam-api/: .dockerignore  .env.example  Cargo.toml  DEVELOPMENT_TEST_ACCOUNTS.md  Dockerfile  README.md  README_MAC_DEBUG.md
mbam-api/docs/: API_DEVELOPMENT_RULES.md  AUTHENTICATION_DESIGN.md
mbam-api/migrations/: 0001_initial_schema.sql  0002_seed_auth_permissions.sql  0003_password_reset_tokens.sql  0004_team_invites_and_sync_tracking.sql  0005_products.sql  0006_transactions.sql  0007_product_unit_scope.sql  0007_transaction_drafts.sql  0009_screen_permissions.sql  0010_authorization_versions.sql  0011_reporting_indexes.sql  0012_keycloak_role_outbox.sql  0013_stock_movements.sql  0014_stock_screen_permission.sql  0015_stock_movement_expiry.sql  README.md
mbam-api/src/: README.md  checklist_tests.rs  config.rs  dev_demo_data.rs  dev_seed.rs  dev_seed_cleanup.rs  error.rs  main.rs  observability.rs  state.rs
mbam-api/src/auth/: README.md  identity_repository.rs  keycloak.rs  mod.rs  password.rs
mbam-api/src/auth_layer/: README.md  authorization.rs  claims.rs  deny.rs  keycloak.rs  mod.rs  provider.rs  provider_boundary.rs  roles.rs  session.rs
mbam-api/src/authentication/: README.md  context.rs  keycloak.rs  mod.rs  principal.rs  repository.rs
mbam-api/src/authentication_layer/: README.md  keycloak.rs  mod.rs  provider.rs
mbam-api/src/db/: README.md  mod.rs  pool.rs
mbam-api/src/dev/: README.md  demo_data.rs  mod.rs  seed.rs  (+1 more)
(+310 files in other folders)
